<resources>
    <string name="app_name">비비</string>
    <string name="before_beach">해수욕장 가기전엔?\n비비와 함께!</string>
    <string name="network">네트워크</string>
    <string name="dialog_check_network">인터넷 연결후 확인 버튼을 눌러주세요.</string>
    <string name="confirm">확인</string>
    <string name="socket_timeout_exception">서버와의 통신제한시간이 초과되었습니다.\n다시 시도해주세요.</string>
    <string name="beach">해수욕장</string>
    <string name="current_location">현재위치</string>

    <!-- Main -->
    <string name="header_title">어떤 바다로 가시나요?</string>
    <string name="beach_name">해수욕장 이름</string>
    <string name="congestion">혼잡도 : </string>
    <string name="congestion_value">%s</string>
    <string name="congest">혼잡</string>
    <string name="normal">좋음</string>
    <string name="few_congest">보통</string>
    <string name="congest_color">#AF1010</string>
    <string name="few_congest_color">#FFC107</string>
    <string name="normal_color">#1E882F</string>
    <string name="search_beach">해수욕장 검색</string>
    <string name="show_list">목록보기</string>
    <string name="fail_find_current_location">현재 위치를 찾는데 실패했습니다.</string>
    <string name="setting_navi">기본 네비게이션</string>
    <string name="version_menu">버전확인</string>
    <string name="poi_name">장소명</string>
    <string name="find_road_guide">클릭해서 길찾기</string>

    <!-- Search -->
    <string name="search_hint">해수욕장 이름을 입력해주세요.</string>
    <string name="input_keyword">검색어를 입력해주세요.</string>

    <!-- Check Version -->
    <string name="current_version">현재버전 %s</string>

    <!-- Setting Navi -->
    <string name="setting_navi_title">네비게이션 설정</string>
    <string name="kakao_map">카카오맵</string>
    <string name="t_map">티맵</string>
    <string name="selected_navi">기본 네비게이션 : %s</string>

</resources>