<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bottom_border_textview"
    android:clickable="true"
    android:focusable="true"
    android:layout_gravity="center"
    android:foreground="?android:attr/selectableItemBackgroundBorderless"
    android:padding="10dp"
    >

        <TextView
            android:id="@+id/beachName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beach_name"
            android:textSize="15sp"
            android:layout_centerVertical="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/congestionLayout"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            android:textColor="@color/black"
            />

        <LinearLayout
            android:id="@+id/congestionLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/beachName"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/congestion"
                    android:layout_marginEnd="5dp"
                    android:textSize="11sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    />

                <TextView
                    android:id="@+id/congestionTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/congestion_value"
                    android:textSize="11sp"
                    android:textStyle="bold"
                    android:textColor="@color/main_text_color"
                    />
        </LinearLayout>

        <ImageButton
            android:id="@+id/findRoadButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_find_road_24"
            android:backgroundTint="@color/main_color"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
</androidx.constraintlayout.widget.ConstraintLayout>