<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="settingNaviActivity"
            type="com.lee.beachcongetion.ui.activity.navi.SettingNaviActivity"
            />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/headerLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/kakaoMapLayout"
            android:background="@color/main_color"
            >
            <ImageButton
                android:backgroundTint="@color/main_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_back_24"
                android:onClick="@{() -> settingNaviActivity.finish()}"
                />

            <TextView
                android:id="@+id/headerTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/swagger"
                android:gravity="center"
                android:text="@string/setting_navi_title"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/kakaoMapLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/headerLayout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tMapLayout"
            android:focusable="true"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:padding="20dp"
            >
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/kakao_map"
                android:layout_gravity="center_vertical"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kakao_map"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:paddingStart="20dp"
                android:paddingEnd="0dp"
                android:layout_gravity="center_vertical"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tMapLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/kakaoMapLayout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:focusable="true"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:padding="20dp"
            >
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/tmap"
                android:layout_gravity="center_vertical"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/t_map"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:paddingStart="20dp"
                android:paddingEnd="0dp"
                android:layout_gravity="center_vertical"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/selectedNaviTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/selected_navi"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@color/main_color"
            android:fontFamily="@font/swagger"
            android:textSize="15sp"
            android:padding="10dp"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
